--- a/fast_barcode_scanner/pubspec.yaml
+++ b/fast_barcode_scanner/pubspec.yaml
@@ -2,6 +2,7 @@ name: fast_barcode_scanner
 description: A fast barcode scanner using MLKit on Android and AVFoundation on iOS.
 version: 2.0.0-dev.5
 homepage: https://github.com/jhoogstraat/fast_barcode_scanner
+publish_to: none
 repository: https://github.com/jhoogstraat/fast_barcode_scanner
 
 environment:
